# pbench

./: .JenkinsPipeline  .coveragerc  .flake8  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  .stestr.conf  .travis.yml  CONTRIBUTION.md  MANIFEST.in  README.md  VERSION  build.sh  contact.css  contact.html  doc.html  exec-tests  exec-unittests  fetch-curr-commit-id  index.css  index.html  learn.html  lint-requirements.txt  multi_vm_lvm_ssd_native_vs_threads_raw_sync_iodepth_1_jobs_32-readwrite_IOPS.js  multi_vm_lvm_ssd_native_vs_threads_raw_sync_iodepth_1_jobs_32.html  multi_vm_lvm_ssd_native_vs_threads_raw_sync_iodepth_1_jobs_32.txt  newfile  params.json  pbench-agent.html  pyproject.toml  pytest.ini  requirements.txt  run-unittests  setup.cfg  setup.py  single_vm_xfs_ssd_nfs_native_vs_threads_sync-readwrite_IOPS.js  single_vm_xfs_ssd_nfs_native_vs_threads_sync.html  single_vm_xfs_ssd_nfs_native_vs_threads_sync.txt  skeleton.html  (+3 more)
.github/ISSUE_TEMPLATE/: bug.yaml
.github/codeql/: javascript-config.yml  python-config.yml
.github/workflows/: codeql-analysis.yml  codeql.yml  gh-pages.yml
Demo/src/: READ_ME.txt  TODO  demo-01-run-pbench.sh  demo-01.README  demo-01.sh  demo-script.py  demo_script.sh  generate_grpc_code_from_proto.py  node1.proto  node1_pb2.py  node1_pb2_grpc.py  node1_server.py  test_client.py
agent/: MANIFEST  Makefile  PbenchBase.pm  VERSION  base  base.ut.post  base.ut.pre  constraints.txt  profile  requirements.txt  run-unittests  test-constraints-3.6.txt  test-requirements.txt
agent/ansible/: Makefile  README  ansible-lint.yml  ansible.cfg  ara.yml  pbench-agent-config.yml  pbench-agent-install.yml  pbench-agent-uninstall.yml  pbench-ara.yml  pbench-repo-install.yml  pbench_agent_config.yml  pbench_agent_install.yml  pbench_agent_tool_meister_firewall.yml  pbench_repo_install.yml  requirements.yml
agent/bench-scripts/: drop-cache-example.sh  pbench-bzt  pbench-copy  pbench-cyclictest  pbench-dbench  pbench-dir  pbench-fio  pbench-fio.md  pbench-gen-iterations  pbench-get-config  pbench-iozone  pbench-linpack  pbench-migrate  pbench-moongen  pbench-mpt  pbench-netperf  pbench-ping  pbench-remove  pbench-run-benchmark  pbench-run-benchmark-sample  pbench-run-benchmark.pl  pbench-specjbb2005  pbench-ssh  pbench-sync  pbench-trafficgen  pbench-trampoline  pbench-uperf  pbench-uperf-client  pbench-uperf-server  pbench-uperf.md  pbench-user-benchmark  pbench_bzt  pbench_cyclictest  pbench_dbench  pbench_fio  pbench_linpack  pbench_migrate  pbench_specjbb2005  pbench_uperf  unittests  (+1 more)
agent/config/: ansible.cfg  pbench-agent-default.cfg  pbench-agent-default.cfg.example  pbench-agent.cfg  pbench-agent.cfg.example  pbench-agent.conf  pbench-agent.conf.example  pmlogger.conf
agent/lib/: GenData.pm  PbenchAnsible.pm  PbenchBase.pm  PbenchCDM.pm  PbenchES.pm  SysStat.pm
agent/rpm/: Makefile  README.md  exclude.pats  gen_final_requirements  pbench-agent.spec  pbench-agent.spec.j2  python-module-mapping.table  rpm.mk  targets.json
agent/run-scripts/: README  run-fio-ramdisk-aio.sh  run-fio-ramdisk-ext4-xfs-btrfs.sh  run-fio-ramdisk.sh
agent/templates/: pmcd.conf  pmlogger.conf  prometheus.yml
agent/tool-scripts/: README  README.md  ara  base-tool  blktrace  bpftrace  dcgm  dm-cache  docker  docker-info  external-data-source  haproxy-ocp  jaeger  jmap  jstack  kvm-spinlock  kvmtrace  lockstat  meta.json  mpstat  node-exporter  oc  openshift-metrics  pbench  pcp  pcp-mapping.json  pcp-transient  pcptool  perf  perf.README  pprof  prometheus-metrics  rabbit  sar  strace  systemtap  tcpdump  turbostat  unittests  user-tool
agent/util-scripts/: README  README.md  activate-local-installation  bind-ethernet-ints-to-node  bind-vhost-node0  cdm-get-iterations  cdm-get-result  check-vcpu-prio.sh  clear-tools  collect-sysinfo  copy-results  cpu-hog  disable-ht  edit-prefix  get-internal-tool  getconf.py  install-pub-key  kill-tools  list-tools  list-triggers  log-timestamp  metadata-log  move-results  neutron  offline-node-cpus  pbench-add-metalog-option  pbench-config  (+64 more)
bgtasks/: Makefile  deploy
client/: requirements.txt
configtools/: MANIFEST  Makefile  README.org  profile  setup.py
contrib/: create-links.sh
css/: modal.css  patternfly-globals.css  patternfly-themes.css  style.css
dashboard/: .env  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  Makefile  README.md  config-overrides.js  craco.config.js  jest.config.js  jsconfig.json  jsdoc.json  package-lock.json  package.json
doc/: BENCHMARK_DATA_FORMAT.md  CONTRIBUTING.md  DEVELOPER.md  GETTING_STARTED  GETTING_STARTED.md  INSTALL  INSTALL.md  Makefile  RELEASE-NOTES.md  RELEASE_NOTES.md  TODO  index.html  index.md  index.org  pbench-agent.org  pbench-agent.uml-seq.md  pbench-doc.el  profile  results.org  test-rpms.org  travis-ci.org
docs/: API.md  CONFIG_DATA.md  CONFIG_DATA.rst  CONTRIBUTING.md  CONTRIBUTING.rst  GETTING_STARTED.md  GETTING_STARTED.rst  INSTALL.rst  Makefile  README.md  agent-1.0-designs.md  batch-export.el  conf.py  index.html  index.rst  pbench-agent-package-dependencies-list.md  pbench-agent.org  pbench-agent.rst  pbench-agent.uml-seq.md  requirements.txt  results.rst  travis-ci.org  travis-ci.rst
jenkins/: .gitignore  Makefile  Pipeline.gy  branch.name  ci.Dockerfile.j2  ci.fedora.Dockerfile  development.Dockerfile  development.Dockerfile.j2  development.RHEL8.Dockerfile  install_from_source_and_run_unittests.sh  podman  python-setup.sh  run  run-alembic-migrations-check  run-pytests  run-server-func-tests  run-unittests  runlocal  runner  set-expiration  tox
js/: accordion.js  drawer.js  tab.js
pbench/: __init__.py  __main__.py  exception.py  indexer.py  logger.py  shell.py  utils.py
relay/: __init__.py  relay.py  requirements.txt  test_relay.py
rpm/: Makefile  README.org  profile
server/: Makefile  VERSION  exec_functests  requirements.txt  run-unittests  test-requirements.txt
utils/: detox  development.Dockerfile  rpm.mk  rpmlint  tree-cleanup  utils.mk  ver
web-server/: Makefile  VERSION  deploy.example.bash
(+5252 files in other folders)
