[build-system]
requires = [
    "setuptools >= 46.1.3.",
    "wheel >= 0.34.2",
    "setuptools_scm >= 6.0"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-s"
log_cli = "False"
log_level = "DEBUG"
testpaths = [ "lib/pbench/test" ]

[tool.isort]
profile = "black"                 # black-compatible (e.g., trailing comma)
known_first_party = ["pbench"]    # separate "pbench" section
multi_line_output = 3             # "hanging" indent with dedented paren
force_sort_within_sections = true # don't separate import vs from
order_by_type = false             # sort alphabetic regardless of case
extend_skip = ["fio-histo-log-pctiles.py", "server/legacy/web-server/v0.3/demo.py"] # like black

[tool.black]
skip-string-normalization = false
include = '''
\.pyi?$
| ^/agent/bench-scripts/postprocess/user-benchmark-wrapper$
| ^/agent/bench-scripts/test-bin/mock-postprocess/uperf-postprocess$
| ^/agent/bench-scripts/test-bin/java$
| ^/agent/tool-scripts/datalog/haproxy-ocp-datalog$
| ^/agent/tool-scripts/datalog/pprof-datalog$
| ^/agent/tool-scripts/datalog/pprof-master-n-nodes$
| ^/agent/tool-scripts/datalog/prometheus-metrics-datalog$
| ^/agent/tool-scripts/datalog/oc-datalog$
| ^/agent/tool-scripts/dcgm$
| ^/agent/tool-scripts/node-exporter$
| ^/agent/tool-scripts/pcp-transient$
| ^/agent/tool-scripts/pcp$
| ^/agent/tool-scripts/postprocess/prometheus-metrics-postprocess$
| ^/agent/util-scripts/test-bin/hostname$
| ^/agent/util-scripts/test-bin/mock-cmd$
| ^/agent/util-scripts/get-internal-tool$
| ^/agent/util-scripts/pbench-add-metalog-option$
| ^/agent/util-scripts/pbench-display-sysinfo-options$
| ^/agent/util-scripts/pbench-tool-meister-client$
| ^/agent/util-scripts/pbench-tool-meister-stop$
| ^/agent/util-scripts/pbench-verify-sysinfo-options$
| ^/agent/util-scripts/tool-meister/pbench-tool-data-sink$
| ^/agent/util-scripts/tool-meister/pbench-tool-meister$
| ^/agent/util-scripts/validate-hostname$
| ^/agent/util-scripts/validate-ipaddress$
| ^/agent/util-scripts/pbench-tool-meister-start$
| ^/server/bin/pbench-backup-tarballs$
| ^/server/bin/pbench-cull-unpacked-tarballs$
| ^/server/bin/pbench-index$
| ^/server/bin/pbench-reindex$
| ^/server/bin/pbench-unpack-tarballs$
| ^/server/bin/pbench-verify-backup-tarballs$
| ^/utils/fetch-curr-commit-id$
'''
extend-exclude = '''
(
fio-histo-log-pctiles\.py$
| ^/dashboard/node_modules/
| server/legacy/web-server/v0\.3/demo\.py$
)
'''
