[project]
name = "pbench"
version = "0.69.10"

[build-system]
requires = [
    "setuptools >= 46.1.3",
    "wheel >= 0.34.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.black]
skip-string-normalization = false
exclude = """
(
fio-histo-log-pctiles.py
| agent/stockpile
| web-server
| .git
| .venv
)
"""
