[metadata]
name = pbench
summary = A benchmarking and performance analysis framework
description_file =
    README.md
home_page = https://github.com/distributed-system-analysis/pbench
classifier =
    Development Status :: 4 - Beta,
    License :: OSI Approved :: GNU General Public License v3 (GPLv3),
    Operating System :: POSIX :: Linux,
    Programming Language :: Python :: 3,
    Programming Language :: Perl,
    Programming Language :: Unix Shell,
    Topic :: System :: Distributed Computing,
    Topic :: System :: Monitoring
version = 0.72.0

[options]
python_requires = >= 3.6
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =lib

[options.packages.find]
where = lib

[options.entry_points]
console_scripts = 
    pbench-cleanup = pbench.agent.cli.commands.cleanup:main
    pbench-clear-results = pbench.agent.cli.commands.results.clear:main
    pbench-clear-tools = pbench.agent.cli.commands.tools.clear:main
    pbench-config = pbench.common.conf:main
    pbench-tree-manage = pbench.server.cli.tree_manage:tree_manage
    pbench-generate-token = pbench.agent.cli.commands.generate_token:main
    pbench-is-local = pbench.agent.cli.commands.is_local:main
    pbench-list-tools = pbench.agent.cli.commands.tools.list:main
    pbench-list-triggers = pbench.agent.cli.commands.triggers.list:main
    pbench-register-tool-trigger = pbench.agent.cli.commands.triggers.register:main
    pbench-results-move = pbench.agent.cli.commands.results.move:main
    pbench-results-push = pbench.agent.cli.commands.results.push:main
    pbench-server = pbench.server.cli.shell:main
    pbench-tools-kill = pbench.agent.cli.commands.tools.kill:main
    pbench-user-create = pbench.server.cli.user_management:user_create
    pbench-user-delete = pbench.server.cli.user_management:user_delete
    pbench-user-list = pbench.server.cli.user_management:user_list
    pbench-user-update = pbench.server.cli.user_management:user_update
