[metadata]
name = pbench
summary = A benchmarking and performance analysis framework
description_file =
    README.md
author = Pbench by Red Hat
maintainer = Pbench by Red Hat
home_page = https://github.com/distributed-system-analysis/pbench
classifier =
   Programming Language :: Python :: 3.9,
   License :: OSI Approved :: GNU General Public License v3 (GPLv3),
   Operating System :: OS Independent,

[options]
python_requires = >= 3.9
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =server/lib

[options.packages.find]
where = server/lib

[tools:pytest]
testpaths = server/lib/test
