[metadata]
name = pbench
summary = A benchmarking and performance analysis framework
description_file =
    README.md
author = Pbench by Red Hat
maintainer = Pbench by Red Hat
home_page = https://github.com/distributed-system-analysis/pbench
classifier =
   Programming Language :: Python :: 3.6,
   License :: OSI Approved :: GNU General Public License v3 (GPLv3),
   Operating System :: OS Independent,

[options]
python_requires = >= 3.6
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =lib

[options.packages.find]
where = lib

[entry_points]
console_scripts =
   pbench-audit = pbench.cli.server.audit:audit
   pbench-cleanup = pbench.cli.agent.commands.cleanup:main
   pbench-clear-results = pbench.cli.agent.commands.results.clear:main
   pbench-clear-tools = pbench.cli.agent.commands.tools.clear:main
   pbench-config = pbench.cli.agent.commands.conf:main
   pbench-is-local = pbench.cli.agent.commands.is_local:main
   pbench-list-tools = pbench.cli.agent.commands.tools.list:main
   pbench-list-triggers = pbench.cli.agent.commands.triggers.list:main
   pbench-register-tool-trigger = pbench.cli.agent.commands.triggers.register:main
   pbench-reindex = pbench.cli.server.reindex:reindex
   pbench-report-generator = pbench.cli.server.report:report
   pbench-results-move = pbench.cli.agent.commands.results.move:main
   pbench-results-push = pbench.cli.agent.commands.results.push:main
   pbench-server = pbench.cli.server.shell:main
   pbench-server-config = pbench.cli.server.conf:main
   pbench-tools-kill = pbench.cli.agent.commands.tools.kill:main
   pbench-tree-manage = pbench.cli.server.tree_manage:tree_manage
   pbench-user-create = pbench.cli.server.user_management:user_create
   pbench-user-delete = pbench.cli.server.user_management:user_delete
   pbench-user-list = pbench.cli.server.user_management:user_list
   pbench-user-update = pbench.cli.server.user_management:user_update

[tools:pytest]
testpaths = lib/pbench/test
